--- a/court-service/src/main/resources/application.yml
+++ b/court-service/src/main/resources/application.yml
@@ -10,3 +10,14 @@ spring:
     - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
     - org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
     - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+logging:
+  level:
+    com:
+      mxninja: DEBUG
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
